# superbot-next

./: .dockerignore  .env.example  .gitattributes  .gitignore  .session-journal.md  CONSTITUTION.md  Dockerfile  README.md  docker-compose.yml  manifest.snapshot.json  plugins.lock.json  project.index.json  pyproject.toml  railway.json  requirements.txt  substrate.config.json
.claude/: CLAUDE.md
.github/: CODEOWNERS
.sessions/: 2026-07-09-kit-upgrade-v1.0.0.md  2026-07-09-kit-upgrade-v1.2.0.md  2026-07-09-kit-upgrade-v1.6.0.md  2026-07-09-kit-version-pin.md  2026-07-09-worldcard-reply-fix.md  2026-07-10-band5-compensator-fixes.md  2026-07-10-band5-live-drive.md  2026-07-10-band5-status-debt.md  2026-07-10-effect-leg-gaps-idea.md  2026-07-10-general-parity-flip.md  2026-07-10-help-parity-flip.md  2026-07-10-hermes-parity-flip.md  2026-07-10-idea-seeds.md  2026-07-10-kit-upgrade-v1.7.0.md  2026-07-10-kit-upgrade-v1.7.1.md  2026-07-10-leaderboard-parity-flip.md  2026-07-10-leaderboard-parity-groundwork.md  2026-07-10-utility-parity-flip.md  2026-07-10-ux-lab-parity-flip.md  2026-07-10-uxlab-parity-flip.md  2026-07-11-admin-parity-flip.md  2026-07-11-automod-parity-flip.md  2026-07-11-band6-games-session.md  2026-07-11-band7-builder-session.md  2026-07-11-band7-continuation-session.md  2026-07-11-band7-heartbeat-3.md  2026-07-11-band7-hygiene-write-ratchet-conftest.md  2026-07-11-behavior-preset-slice.md  2026-07-11-btd6-resolver-maps-modes.md  2026-07-11-btd6-unmapped-rehome.md  2026-07-11-chain-parity-flip.md  2026-07-11-channel-parity-flip.md  2026-07-11-cleanup-parity-flip.md  2026-07-11-closeout-wrapup.md  2026-07-11-codex-p2-triage.md  2026-07-11-community-parity-flip.md  2026-07-11-community-spotlight-parity-flip.md  2026-07-11-counters-parity-flip.md  2026-07-11-counting-parity-flip.md  2026-07-11-diagnostic-parity-flip.md  (+299 more)
.substrate/: guard-fires.jsonl  state.json  upgrade-report.md
compat/: compat-frozen.json
control/: README.md  inbox.md  outbox.md  status.md
docs/: AGENT_ORIENTATION.md  CAPABILITIES.md  NEXT-TASKS.md  PROJECT-CLOSEOUT.md  RECREATED-PROJECT-DAY1.md  ROUTINES.md  SKILLS.md  _merge_verification_2026-07-15.md  ai-project-workflow.md  architecture.md  collaboration-model.md  current-state.md  decisions.md  eap-closeout-walkthrough-2026-07-14.md  game-plugin-contract.md  helper-policy.md  owner-profile.md  ownership.md  question-router.md  reading-path.md  repo-navigation-map.md  runtime_contracts.md  seat-digest.md
examples/superbot-idle-plugin/: README.md  pyproject.toml
examples/superbot-idle-plugin/idle_engine/: __init__.py  achievements.py  economy.py  engine.py  prestige.py  render.py  state.py  theme.py  upgrades.py
examples/superbot-idle-plugin/superbot_idle_plugin/: __init__.py  manifest.py  render_forward.py
migrations/: 0001_idempotency_keys.sql  0002_event_outbox.sql  0003_audit_spine.sql  0004_due_queue.sql  0005_drafts.sql  0006_invariants.sql  0007_credential_rotation.sql  0008_ai_decision_audit.sql  0009_settings.sql  0010_moderation.sql  0011_prohibited_words.sql  0012_economy.sql  0013_treasury.sql  0014_xp.sql  0015_karma.sql  0016_governance.sql  0017_roles.sql  0018_platform_control.sql  0019_games.sql  0020_checkpoint_games.sql  0021_message_games.sql  0022_pvp_stats.sql  0023_btd6_strategies.sql  0024_ai_review_presets.sql  0025_panel_anchors.sql  0026_game_state_timestamps.sql  0027_guild_settings.sql  0028_ai_policy.sql  0029_ai_instruction_profile.sql  0029_platform_migration_checkpoints.sql  0030_ai_instruction_profile.sql  0031_ai_orchestration_profile.sql  0032_ticket_admin.sql  0033_starboard.sql  0034_btd6_data_blobs.sql  0034_fishing_energy.sql  0035_fishing_energy.sql  0036_game_xp_shipped_types.sql  0037_setup_session.sql  0038_bindings_oracle_shape.sql  (+21 more)
parity/: COVERAGE.md  README.md  __init__.py  coverage.py  parity.yml  run.py
sb/: __init__.py  __main__.py
sim/: __init__.py  apply.py  navigation_walk.py  run.py  sim-gate-baseline.json  space.py  usage.snapshot.json
(+2099 files in other folders)
